# mcp-macos-colima

./: INSTALL_MCP.md  MCP_Client_Test_Instructions.md  METHODS_SUPPORTED.md  PRD.md  README.md  create_mcp_json.sh  generate_mac_config_snippet.sh  pyproject.toml  run_claude_code_tests.py  run_gemini_tests.py  snippet.json
src/mcp_colima/: __init__.py  cli_wrapper.py  models.py  server.py
src/mcp_colima.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/mcp_colima/tools/: __init__.py  access.py  lifecycle.py  status.py
test_reports/: colima_baseline_results.json
test_reports/mcp_colima/claude_code/: mcp-client-results-2026-03-23.md  mcp-client-results-2026-03-24.md  raw-results-2026-03-24.json
test_reports/mcp_colima/codex/: mcp-client-results-2026-03-23.md  mcp-client-results-2026-03-24.md
test_reports/mcp_colima/copilot/: mcp-client-results-2026-03-23.md  mcp-client-results-2026-03-24.md
test_reports/mcp_colima/gemini/: mcp-client-results-2026-03-23.md  mcp-client-results-2026-03-24.md  raw-results-2026-03-24.json
tests/: conftest.py
tests/integration/: test_smoke_integration.py
tests/unit/: test_cli_wrapper.py  test_tools.py
